--- a/styles/foodPage.css
+++ b/styles/foodPage.css
@@ -1,16 +1,15 @@
 .header {
   position: absolute;
   top: 20px;
-  left: 140px;
   display: flex;
   justify-content: space-between;
-  width: 826px;
-  margin: 20px 20px 0 140px;
+  width: 1024px;
   z-index: 5;
 }
 
 .header__nav {
   display: flex;
+  margin-right: 20px;
   font-size: 30px;
   line-height: 32px;
   font-family: Cormorant SC;
@@ -45,6 +44,7 @@
   justify-content: space-between;
   width: 155px;
   margin-top: 3px;
+  margin-left: 140px;
   z-index: 1;
   cursor: pointer;
 }
@@ -92,6 +92,7 @@
   color: #f9caaf;
 }
 .foodBalance {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -101,6 +102,14 @@
   justify-content: space-between;
   background: #090201;
   margin-top: -5px;
+  padding-bottom: 20px;
+}
+
+.foodBalance__description_waveImg {
+  position: absolute;
+  width: 100%;
+  bottom: -124px;
+  left: 0;
 }
 .foodBalance__description {
   width: 900px;
@@ -128,4 +137,412 @@
   font-weight: 500;
   line-height: normal;
   color:#fff;
+  z-index: 5;
 }
+.foodRation {
+  position: relative;
+  width: 100%;
+  
+}
+.foodRation__wrapper {
+  width: 78%;
+  margin-top: 140px;
+  margin-left: 75px;
+  
+}
+.foodRation__title {
+  font-family: Roboto Condensed;
+  font-size: 48px;
+  font-weight: 500;
+  line-height: 56px;
+  color:#fff;
+  z-index: 5;
+}
+.foodRation__list {
+  margin-top: 30px; 
+  margin-left: 50px;
+  list-style-type: disc;
+  font-family: Roboto Condensed;
+  font-size: 34px;
+  font-weight: 500;
+  line-height: normal;
+  color:#fff;
+  z-index: 5;
+  padding-bottom: 20px;
+}
+.foodRation__waveImg {
+  position: absolute;
+  margin-left: 0;
+  width: 1024px;
+  bottom: -165px;
+  z-index: 1;
+}
+
+.nutrients {
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  background: #090201;
+}
+.nutrients__wrapper {
+  margin-top: 180px;
+  width: 85%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: right;
+  gap: 30px;
+  
+}
+.nutrients__title {
+  font-family: Roboto Condensed;
+  font-size: 48px;
+  font-weight: 500;
+  line-height: 56px;
+  color:#fff;
+}
+.nutrients__description span {
+  font-family: Roboto Condensed;
+  font-size: 40px;
+  font-weight: 700;
+}
+.nutrients__description {
+  width: 60%;
+  font-family: Roboto Condensed;
+  font-size: 30px;
+  font-weight: 500;
+  line-height: normal;
+  color:#fff;
+}
+.nutrients__description_fat {
+  text-align: left;
+  width: 60%;
+  font-family: Roboto Condensed;
+  font-size: 30px;
+  font-weight: 500;
+  line-height: normal;
+  color:#fff;
+}
+.nutrients__fat {
+  display: flex;
+  justify-content: space-between;
+}
+.nutrients__protein {
+  display: flex;
+  justify-content: space-between;
+}
+.nutrients__protein_img {
+  width: 330px;
+}
+.nutrients__fat_img {
+  width: 200px;
+  margin-top: -20px;
+}
+.nutrients__waveImg {
+  position: absolute;
+  width: 1024px;
+  bottom: -115px;
+}
+.substances {
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  text-align: left;
+}
+.substances__title {
+  margin-top: 160px;
+  width: 85%;
+  font-family: Roboto Condensed;
+  font-size: 48px;
+  font-weight: 500;
+  line-height: 56px;
+  color:#fff;
+}
+.substances__container {
+  margin: 40px 75px;
+  width: 85%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.substances__wrapper {
+  width: 57%;
+}
+
+.substances__container_img {
+  width: 370px;
+  height: 370px;
+}
+.substances__description {
+  font-family: Roboto Condensed;
+  font-size: 30px;
+  font-weight: 500;
+  line-height: normal;
+  color:#fff;
+}
+.substances__description span {
+  font-size: 40px;
+  font-weight: 700;
+}
+.substances__description:first-child{
+  margin-bottom: 30px;
+}
+.substances__waveImg {
+  position: absolute;
+  width: 1024px;
+  bottom: -110px;
+  z-index: 1;
+}
+.vitamins {
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: right;
+  background: #090201;
+  padding-bottom: 20px;
+}
+.vitamins__container {
+  margin-top: 160px;
+  width: 88%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.vitamins__description_title {
+  margin-bottom: 30px;
+  margin-left: 70px;
+  width: 85%;
+  font-family: Roboto Condensed;
+  font-size: 48px;
+  font-weight: 500;
+  line-height: 56px;
+  color:#fff;
+}
+
+.vitamins__description_text {
+  font-family: Roboto Condensed;
+  font-size: 30px;
+  font-weight: 500;
+  line-height: normal;
+  color:#fff;
+}
+.vitamins__description_text span {
+  font-size: 40px;
+  font-weight: 700;
+}
+.vitamins__img {
+  width: 443px;
+  height: 443px;
+}
+.vitamins__waveImg {
+  position: absolute;
+  width: 1024px;
+  bottom: -125px;
+  z-index: 1;
+}
+.balanced {
+  position: relative;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: right;
+  padding-bottom: 20px;
+}
+.balanced__title {
+  margin-top: 150px;
+  margin-left: 250px;
+  width: 58%;
+  font-family: Roboto Condensed;
+  font-size: 50px;
+  font-weight: 500;
+  line-height: 56px;
+  color:#fff;
+}
+.balanced__scheme {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.balanced__scheme_wrapper {
+  margin-top: 65px;
+  display: flex;
+  flex-direction: column;
+  gap: 35px;
+}
+.balanced__scheme_text {
+  text-align: left;
+  margin-left: 30px;
+  width: 65%;
+  font-family: Roboto Condensed;
+  font-size: 30px;
+  font-weight: 500;
+  line-height: normal;
+  color:#fff;
+}
+.balanced__scheme_img {
+  margin-left: 135px;
+}
+.balanced__waveImg {
+  position: absolute;
+  width: 1024px;
+  bottom: -110px;
+  z-index: 1;
+}
+
+.plateRule {
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: left;
+  background: #090201;
+}
+.plateRule__container {
+  margin: 40px 75px;
+  width: 85%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.plateRule__description_title {
+  margin-top: 140px;
+  margin-bottom: 40px;
+  width: 85%;
+  font-family: Roboto Condensed;
+  font-size: 50px;
+  font-weight: 700;
+  line-height: 56px;
+  color:#fff;
+}
+.plateRule__description_text {
+  font-family: Roboto Condensed;
+  font-size: 30px;
+  font-weight: 500;
+  line-height: normal;
+  color:#fff;
+}
+.plateRule__container_img {
+  margin-top: 140px;
+  width: 380px;
+  height: 380px;
+}
+.plateRule__waveImg {
+  position: absolute;
+  width: 1024px;
+  bottom: -120px;
+  z-index: 1;
+}
+
+.rationDivid {
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  text-align: right;
+  padding-bottom: 20px;
+}
+.rationDivid__title {
+  margin-top: 160px;
+  margin-bottom: 40px;
+  width: 85%;
+  font-family: Roboto Condensed;
+  font-size: 50px;
+  font-weight: 500;
+  line-height: 56px;
+  color:#fff;
+}
+.rationDivid__container {
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.rationDivid__container_img {
+  width: 355px;
+  height: 355px;
+}
+.rationDivid__list {
+  width: 57%;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  list-style-type: disc;
+}
+.rationDivid__list_item {
+  font-family: Roboto Condensed;
+  font-size: 30px;
+  font-weight: 500;
+  line-height: normal;
+  color:#fff;
+}
+.rationDivid__waveImg {
+  position: absolute;
+  width: 1024px;
+  bottom: -110px;
+  z-index: 1;
+}
+.reasonBalance {
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  text-align: left;
+  padding-bottom: 110px;
+  background: #090201;
+}
+.reasonBalance__title {
+  margin-top: 160px;
+  margin-bottom: 40px;
+  width: 85%;
+  font-family: Roboto Condensed;
+  font-size: 50px;
+  font-weight: 700;
+  line-height: 56px;
+  color:#fff;
+}
+.reasonBalance__container {
+  margin-left: -120px;
+  width: 65%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.reasonBalance__container_img {
+  width: 160px;
+  margin-left: 90px;
+  /* height: 355px; */
+}
+.reasonBalance__list {
+  width: 57%;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  list-style-type: disc;
+}
+.reasonBalance__list_item {
+  font-family: Roboto Condensed;
+  font-size: 30px;
+  font-weight: 500;
+  line-height: normal;
+  color:#fff;
+}
+.reasonBalance__waveImg {
+  position: absolute;
+  width: 1024px;
+  bottom: -110px;
+  z-index: 1;
+}
+
